Added button guesses
4 random titles from playlist + current track title, shuffled
#5

--- a/src/css/app.module.scss
+++ b/src/css/app.module.scss
@@ -112,3 +112,12 @@
   background-color: var(--spice-notification-error) !important;
   padding: 12px !important;
 }
+
+.randomTitleButton{
+  position: fixed !important;
+  bottom: 25px;
+  left: 25px;
+  color: var(--spice-text) !important;
+  background-color: var(--spice-notification-error) !important;
+  padding: 12px !important;
+}
