--- a/src/css/app.module.scss
+++ b/src/css/app.module.scss
@@ -112,3 +112,26 @@
   background-color: var(--spice-notification-error) !important;
   padding: 12px !important;
 }
+
+.titleButton {
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  color: white;
+  background-color: rgb(70, 130, 180);
+  text-align: center;
+  font-size: clamp(0.5rem, 2vw, 1.25rem); // Reduces the maximum font size
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  line-height: 1.5;
+  white-space: nowrap;
+  display: flex;
+  align-items: center;
+
+  &:hover {
+    background-color: rgb(100, 149, 237);
+  }
+
+  &:active {
+    background-color: rgb(25, 25, 112);
+  }
+}
