--- a/src/css/app.module.scss
+++ b/src/css/app.module.scss
@@ -135,3 +135,72 @@
     background-color: rgb(25, 25, 112);
   }
 }
+
+.settingsContainer{
+  display: flex;
+  flex-direction: column;
+}
+
+.settingsRow{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 10px;
+  border: 1px solid #ffffff;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.settingsLabel{
+  flex: 1;
+  white-space: nowrap;
+  font-size: 1.5rem;
+  padding-right: 10px;
+}
+
+.settingsSelect{
+  flex: 1; 
+  font-size: 1rem;
+  height: 30px;
+  width: 300px;
+}
+
+.settingsOption{
+  font-size: 1rem;
+}
+
+.similarityDisplay{
+  font-size: 2rem;
+  font-style: bold;
+  padding: 10px;
+}
+
+.settingsInput {
+  flex: 1;
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 25px;
+  background: #d3d3d3;
+  outline: none;
+  border-radius: 12px;
+
+  &::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    background: #4CAF50;
+    cursor: pointer;
+    border-radius: 12px;
+  }
+
+  &::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: #4CAF50;
+    cursor: pointer;
+    border-radius: 12px;
+  }
+}
